cloud-infra-macros/tests/fails/visibility_timeout_boundary_high.rs
use cloud_infra_macros::visibility_timeout;

fn example() {
    let timeout = visibility_timeout!(43201);
}

fn main() {}