cloud-infra-macros/tests/fails/visibility_timeout_boundary_high.stderr
error: value should be at most 43200
 --> tests/fails/visibility_timeout_boundary_high.rs:4:39
  |
4 |     let timeout = visibility_timeout!(43201);
  |                                       ^^^^^
